# amanita

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  input.txt  main.cpp  mycology.b98  mycology_result.txt  vcpkg.json
docs/: fingerprints.md
docs/fingerprints/: CFFI.md  IFFI.md  SCKE.md
docs/fingerprints/catseye/: HRTI.md  MODE.md  MODU.md  NULL.md  ORTH.md  PERL.md  REFC.md  ROMA.md  TOYS.md  TURT.md
docs/fingerprints/jvh/: JSTR.md  NCRS.md  SGNL.md
docs/fingerprints/rcs/: 3DSP.md  ARRY.md  BASE.md  BOOL.md  COPT.md  CPLI.md  DATE.md  DIRF.md  EMEM.md  EVAR.md  EXEC.md  FILE.md  FING.md  FIXP.md  FNGR.md  FOBJ.md  FORK.md  FPDP.md  FPRT.md  FPSP.md  FRTH.md  ICAL.md  IIPC.md  IMAP.md  IMTH.md  INDV.md  IPMD.md  LONG.md  MACR.md  MSGQ.md  MVRS.md  RAND.md  REXP.md  SETS.md  SGNE.md  SMEM.md  SMPH.md  SOCK.md  SORT.md  STCK.md  (+8 more)
include/: action.hpp  base_instructions.hpp  base_semantics.hpp  common.hpp  double_ended_stack.hpp  editor.hpp  fingerprint.hpp  fingerprints.hpp  fungespace.hpp  instruction.hpp  instruction_action.hpp  instruction_pointer.hpp  instruction_stack.hpp  instructions.hpp  interpreter.hpp  semantic.hpp  semantic_stack.hpp  sops.hpp  stackstack.hpp  state.hpp  vec.hpp  vm.hpp
include/fingerprint/catseye/: modu.hpp  null.hpp  roma.hpp
include/fingerprint/rcs/: file.hpp
include/fingerprints/: dirf.hpp  file.hpp  hrti.hpp  mode.hpp  modu.hpp  null.hpp  orth.hpp  refc.hpp  roma.hpp  toys.hpp
include/fingerprints/catseye/: hrti.hpp  mode.hpp  modu.hpp  null.hpp  orth.hpp  perl.hpp  refc.hpp  roma.hpp  toys.hpp
include/fingerprints/rcs/: cpli.hpp  date.hpp  dirf.hpp  evar.hpp  file.hpp  fing.hpp  fixp.hpp  fpdp.hpp  fpsp.hpp  frth.hpp  indv.hpp  sock.hpp  strn.hpp  subr.hpp  time.hpp
src/: base_instructions.cpp  base_semantics.cpp  common.cpp  editor.cpp  fingerprint.cpp  fingerprints.cpp  fungespace.cpp  instruction_pointer.cpp  instruction_stack.cpp  interpreter.cpp  semantic_stack.cpp  sops.cpp  stackstack.cpp  state.cpp  vec.cpp  vm.cpp
src/fingerprint/catseye/: modu.cpp  roma.cpp
src/fingerprint/rcs/: file.cpp
src/fingerprints/: dirf.cpp  evar.cpp  file.cpp  hrti.cpp  mode.cpp  modu.cpp  null.cpp  orth.cpp  refc.cpp  roma.cpp  toys.cpp
src/fingerprints/catseye/: hrti.cpp  mode.cpp  modu.cpp  orth.cpp  perl.cpp  refc.cpp  roma.cpp  toys.cpp
src/fingerprints/rcs/: cpli.cpp  date.cpp  dirf.cpp  evar.cpp  file.cpp  fing.cpp  fixp.cpp  fpdp.cpp  fpsp.cpp  frth.cpp  indv.cpp  sock.cpp  strn.cpp  subr.cpp  time.cpp
